# RealCameraViewer

./: CMakeLists.txt  README.md  main.cpp  point_cloud_boundary.cpp  point_cloud_boundary.h  read_calibrated_images.cpp  viewer.cpp  viewer.h
data/: pair.txt
data/cams/: 00000000_cam.txt  00000001_cam.txt  00000002_cam.txt  00000003_cam.txt  00000004_cam.txt  00000005_cam.txt  00000006_cam.txt  00000007_cam.txt  00000008_cam.txt  00000009_cam.txt  00000010_cam.txt  00000011_cam.txt  00000012_cam.txt  00000013_cam.txt  00000014_cam.txt  00000015_cam.txt  00000016_cam.txt  00000017_cam.txt  00000018_cam.txt  00000019_cam.txt  00000020_cam.txt  00000021_cam.txt  00000022_cam.txt  00000023_cam.txt  00000024_cam.txt  00000025_cam.txt  00000026_cam.txt  00000027_cam.txt  00000028_cam.txt  00000029_cam.txt  00000030_cam.txt  00000031_cam.txt  00000032_cam.txt  00000033_cam.txt  00000034_cam.txt  00000035_cam.txt  00000036_cam.txt  00000037_cam.txt  00000038_cam.txt  00000039_cam.txt
src/: CMakeLists.txt  main.cpp  read_calibrated_images.cpp  viewer.cpp  viewer.h
